@@ -1,5 +1,13 @@
 2022-10-05  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* doc/meref.me.in (Columnated Output): Document persistence of
+	`$s` register value across columnation mode changes.
+
+	Fixes <https://savannah.gnu.org/bugs/?62717>.  Thanks to Dave
+	Kemper for the report.
+
+2022-10-05  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* doc/meref.me.in: Fix documentation errors.
 	(Preprocessor Support) <PS>: Swap argument order (width comes
 	first), note empty defaults, and (vaguely) describe their
